# SingWithMe

./: .gitignore  AGENTS.md  Dockerfile  nixpacks.toml  package-lock.json  package.json  railway.json  vite.config.ts
.github/workflows/: ci.yml
configs/: defaults.json  defaults.yaml
configs/desktop/: stage.json  stage.yaml
configs/web/: default.json
desktop/: CMakeLists.txt  README.md
desktop/cmake/: FetchJUCE.cmake
desktop/include/audio/: DeviceManager.h  PipelineProcessor.h
desktop/include/calibration/: Calibrator.h
desktop/include/config/: RuntimeConfig.h
desktop/include/dsp/: ConfidenceGate.h  PitchProcessor.h  VadProcessor.h
desktop/include/ui/: MainWindow.h
desktop/src/: CMakeLists.txt  main.cpp
desktop/src/audio/: DeviceManager.cpp  PipelineProcessor.cpp
desktop/src/calibration/: Calibrator.cpp
desktop/src/config/: RuntimeConfig.cpp
desktop/src/dsp/: ConfidenceGate.cpp  PitchProcessor.cpp  VadProcessor.cpp
desktop/src/ui/: MainWindow.cpp
docs/: architecture-overview.md
electron/main/: index.ts
electron/preload/: index.ts
models/: README.md  crepe_tiny.onnx
public/: pitch-processor.js
src/: App.tsx  index.css  voice-processor.ts
src/types/: yinjs.d.ts
web/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: privacy.html
web/public/worklets/: confidence-gate.worklet.js
web/server/: index.ts
web/src/: main.tsx
web/src/audio/: calibrator.ts  confidenceGate.ts  index.ts  telemetry.ts
web/src/components/: AndroidWaitlistForm.tsx  CalibrationWizard.tsx  ConfidenceMeter.tsx  LatencyBadge.tsx  MetersPanel.tsx  MicMonitorControl.tsx  ModeToggle.tsx  TrackUploader.tsx  TuningControls.tsx
web/src/pages/: Download.css  Download.tsx  Home.css  Home.tsx
web/src/state/: useAppStore.ts
web/src/styles/: global.css
web/src/types/: soundtouchjs.d.ts
web/src/utils/: assetPaths.ts
